<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mysterious</string>
    <string name="hello_world">Bienvenue et merci d\'utiliser Mysterious ROM !!</string>
    <string name="action_settings">Settings</string>
    <string name="_string_ptichalouf">Ptichalouf</string>
    <string name="ptichalouf">Développeur et builder de la team</string>
	<string name="sebelo06">Sebelo06</string>
	<string name="seb">développeur de la team</string>
	<string name="changelog">Changelogs</string>
	
</resources>